# support_system

./: pyproject.toml
support_system/: db.sqlite3
support_system/main/static/main/css/: pain.css
support_system/main/templates/main/: about.html  base.html  index.html
support_system/questions/: forms.py  models.py  urls.py  views.py
support_system/questions/migrations/: 0001_initial.py
support_system/questions/templates/questions/: create.html  details_view.html  questions-delete.html  questions_home.html
support_system/support_system/: settings.py  urls.py
