[tool.poetry]
name = "support-system"
version = "0.1.0"
description = ""
authors = ["foxstudent104512 <artcche@gmail.com>"]
readme = "README.md"
packages = [{include = "support_system"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
